--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -1,37 +1,45 @@
 {
   "store.home": {
     "blocks": [
-      "rich-text",
-      "info-card",
-      "info-card#2"
+      "flex-layout.row"
     ]
   },
-  "rich-text": {
+  "flex-layout.row": {
+    "children": [
+      "info-card#rethink",
+      "flex-layout.col"
+    ]
+  },
+  "flex-layout.col": {
+    "children": [
+      "image#electronics",
+      "image#major-appliance"
+    ],
     "props": {
-      "text": "VTEX Store Framework",
-      "textAlignment": "CENTER",
-      "textPosition": "CENTER",
-      "font": "t-heading-1"
+      "blockClass": [
+        ""
+      ]
     }
   },
-  "info-card": {
+  "info-card#rethink": {
     "props": {
-      "isFullModeStyle": false,
-      "textPosition": "left",
-      "imageUrl": "https://dreamscape.vteximg.com.br/arquivos/audia3",
-      "headline": "Audi",
-      "callToActionText": "Descubra",
-      "subhead": "Modernidade. Conforto"
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Discover",
+      "textPosition": "center"
     }
   },
-  "info-card#2": {
+  "image#electronics": {
     "props": {
-      "isFullModeStyle": false,
-      "textPosition": "right",
-      "imageUrl": "https://dreamscape.vteximg.com.br/arquivos/audia3red",
-      "headline": "Audi",
-      "callToActionText": "Saiba mais",
-      "subhead": "Segurança. Estilo"
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
+      "maxWidth": "100%"
+    }
+  },
+  "image#major-appliance": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
+      "maxWidth": "100%"
     }
   }
 }
