--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -1,9 +1,11 @@
 {
   "store.home": {
     "blocks": [
+      "slider-layout#home",
       "flex-layout.row"
     ]
   },
+  // Flex Layout
   "flex-layout.row": {
     "children": [
       "info-card#rethink",
