--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -2,7 +2,9 @@
   "store.home": {
     "blocks": [
       "slider-layout#home",
-      "flex-layout.row"
+      "flex-layout.row",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile"
     ]
   },
   // Flex Layout
@@ -42,6 +44,30 @@
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"
+    }
+  },
+  "responsive-layout.desktop#desktop": {
+    "children": [
+      "rich-text#desktop"
+    ]
+  },
+  "responsive-layout.mobile#mobile": {
+    "children": [
+      "rich-text#mobile"
+    ]
+  },
+  "rich-text#desktop": {
+    "props": {
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection (I'm on desktop)",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+  "rich-text#mobile": {
+    "props": {
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection (I'm on mobile)",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
     }
   }
 }
