--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -104,7 +104,7 @@
   },
   "tab-content.item#1": {
     "children": [
-      "rich-text#1"
+      "rich-text#home1"
     ],
     "props": {
       "tabId": "majorAppliances"
@@ -112,22 +112,22 @@
   },
   "tab-content.item#2": {
     "children": [
-      "rich-text#2"
+      "rich-text#home2"
     ],
     "props": {
       "tabId": "electronics"
     }
   },
-  "rich-text#1": {
+  "rich-text#home1": {
     "props": {
-      "text": "Texto para Major Appliances",
+      "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
       "textPosition": "CENTER",
       "font": "t-heading-3"
     }
   },
-  "rich-text#2": {
+  "rich-text#home2": {
     "props": {
-      "text": "Texto para Electronics",
+      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
       "textPosition": "CENTER",
       "font": "t-heading-3"
     }
