--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -6,7 +6,8 @@
       "responsive-layout.desktop#desktop",
       "responsive-layout.mobile#mobile",
       "tab-layout#home",
-      "modal-trigger#first"
+      "modal-trigger#first",
+      "list-context.product-list"
     ]
   },
   // Flex Layout
@@ -155,5 +156,36 @@
     "props": {
       "text": "Olá!"
     }
+  },
+  // Product Quick View
+  "list-context.product-list": {
+    "blocks": [
+      "product-summary.shelf"
+    ],
+    "children": [
+      "slider-layout"
+    ]
+  },
+  "product-summary.shelf": {
+    "children": [
+      "modal-trigger#quickview",
+      "product-summary-name",
+      "product-selling-price"
+    ]
+  },
+  "modal-trigger#quickview": {
+    "children": [
+      "product-summary-image",
+      "modal-layout#quickview"
+    ]
+  },
+  "modal-layout#quickview": {
+    "children": [
+      "product-summary-name",
+      "product-images",
+      "product-summary-sku-selector",
+      "product-summary-quantity",
+      "add-to-cart-button"
+    ]
   }
 }
