--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -7,7 +7,8 @@
       "responsive-layout.mobile#mobile",
       "tab-layout#home",
       "modal-trigger#first",
-      "list-context.product-list"
+      "list-context.product-list",
+      "stack-layout#cta"
     ]
   },
   // Flex Layout
@@ -187,5 +188,31 @@
       "product-summary-quantity",
       "add-to-cart-button"
     ]
+  },
+  // Stack Layout
+  "stack-layout#cta": {
+    "children": [
+      "image#cta",
+      "link#cta"
+    ]
+  },
+  "image#cta": {
+    "props": {
+      "blockClass": "cover",
+      "width": "100%",
+      "height": 400,
+      "src": "https://appliancetheme.vtexassets.com/assets/app/src/appliancecat___1b7592b49667c6a89203a0997e06bc87.jpg"
+    }
+  },
+  "link#cta": {
+    "props": {
+      "displayMode": "button",
+      "buttonProps": {
+        "variant": "primary",
+        "size": "large"
+      },
+      "href": "/washer",
+      "label": "Check these awesome discounts"
+    }
   }
 }
