--- a/minimum-boilerplate-theme/store/blocks/product.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/product.jsonc
@@ -1,42 +1,105 @@
+//product.jsonc
 {
   "store.product": {
     "children": [
-      "breadcrumb",
-      "flex-layout.row#main"
+      "condition-layout.product",
+      "flex-layout.row#product-breadcrumb",
+      "flex-layout.row#product-main"
     ]
   },
-  "flex-layout.row#main": {
+  "flex-layout.row#product-breadcrumb": {
     "props": {
-      "marginTop": 6
+      "marginTop": 20
     },
     "children": [
-      "flex-layout.col#left",
-      "flex-layout.col#right"
+      "breadcrumb"
     ]
   },
-  "flex-layout.col#left": {
-    "children": [
-      "product-images"
-    ]
-  },
-  "flex-layout.col#right": {
+  "flex-layout.row#product-main": {
     "props": {
-      "preventVerticalStretch": "top",
-      "verticalAlign": "middle"
+      "colGap": 9,
+      "rowGap": 7,
+      "marginTop": 4,
+      "marginBottom": 7,
+      "paddingTop": 7,
+      "paddingBottom": 7,
+      "blockClass": "product-main"
+    },
+    "children": [
+      "product-images",
+      "flex-layout.col#right-col"
+    ]
+  },
+  "product-images": {
+    "props": {
+      "displayThumbnailsArrows": true,
+      "thumbnailsOrientation": "vertical"
+    }
+  },
+  "flex-layout.col#right-col": {
+    "props": {
+      "preventVerticalStretch": true,
+      "rowGap": 0
     },
     "children": [
       "product-name",
-      "product-identifier.product",
-      "product-price",
-      "flex-layout.row#quantity-selector",
-      "buy-button",
-      "shipping-simulator"
+      "product-price#product-details",
+      "sku-selector",
+      "flex-layout.row#buy-button",
+      "shipping-simulator",
+      "share#default"
     ]
   },
-  "flex-layout.row#quantity-selector": {
+  "product-price#product-details": {
+    "props": {
+      "showInstallments": true,
+      "showSavings": true
+    }
+  },
+  "flex-layout.row#buy-button": {
+    "props": {
+      "marginTop": 4,
+      "marginBottom": 7
+    },
     "children": [
-      "product-quantity",
-      "sku-selector"
+      "buy-button"
     ]
+  },
+  "share#default": {
+    "props": {
+      "social": {
+        "Facebook": true,
+        "WhatsApp": true,
+        "Twitter": false,
+        "Pinterest": true
+      }
+    }
+  },
+  "condition-layout.product": {
+    "children": [
+      "condition.product#retro-mixer"
+    ]
+  },
+  "condition.product#retro-mixer": {
+    "props": {
+      "conditions": [
+        {
+          "subject": "productId",
+          "verb": "is",
+          "object": "2"
+        }
+      ]
+    },
+    "children": [
+      "image#retro-mixer-banner"
+    ]
+  },
+  "image#retro-mixer-banner": {
+    "props": {
+      "src": "https://appliancetheme.vtexassets.com/assets/app/src/retroimage___92a8271aac7c51d2059193bdbe019016.jpg",
+      "width": "100%",
+      "height": "200px",
+      "blockClass": "cover"
+    }
   }
 }
