Criando uma landing page customizada, uma página de busca customizada com inferência de pesquisa, e aprendendo a editar o style.json e o css com css handles

--- a/minimum-boilerplate-theme/manifest.json
+++ b/minimum-boilerplate-theme/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendor": "dreamscape",
-  "name": "minimumtheme",
-  "version": "0.0.0",
+  "vendor": "distribuidorasika",
+  "name": "tema",
+  "version": "0.0.4",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
