--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -1,6 +1,8 @@
 {
   "store.home": {
     "blocks": [
+      "info-card#clearance",
+      "info-card#vintage",
       "slider-layout#home",
       "flex-layout.row",
       "responsive-layout.desktop#desktop",
@@ -10,6 +12,31 @@
       "list-context.product-list",
       "stack-layout#cta"
     ]
+  },
+  "info-card#clearance": {
+    "props": {
+      "id": "info-card-clearance",
+      "isFullModeStyle": false,
+      "textPosition": "left",
+      "imageUrl": "https://storecomponents.vteximg.com.br/arquivos/banner-infocard2.png",
+      "headline": "Clearance Sale",
+      "callToActionText": "DISCOVER",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#vintage": {
+    "props": {
+      "id": "info-card-vintage",
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage",
+      "callToActionText": "DISCOVER",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center",
+      "blockClass": "vintage"
+    }
   },
   // Flex Layout
   "flex-layout.row": {
@@ -161,13 +188,13 @@
   // Product Quick View
   "list-context.product-list": {
     "blocks": [
-      "product-summary.shelf"
+      "product-summary.shelf#lista1"
     ],
     "children": [
       "slider-layout"
     ]
   },
-  "product-summary.shelf": {
+  "product-summary.shelf#lista1": {
     "children": [
       "modal-trigger#quickview",
       "product-summary-name",
