Unificando app customizado na mesma pasta de projeto do tema

--- a/minimum-boilerplate-theme/store/blocks/home.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/home.jsonc
@@ -1,6 +1,7 @@
 {
   "store.home": {
     "blocks": [
+      "countdown",
       "info-card#clearance",
       "info-card#vintage",
       "slider-layout#home",
