Personalizando landing page para o curso de custom store block

--- a/minimum-boilerplate-theme/store/blocks/search-landing.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/search-landing.jsonc
@@ -2,6 +2,7 @@
 {
     "store.custom#landing": {
         "blocks": [
+            "countdown",
             "search-result-layout.customQuery"
         ]
     },
