Componentizando a contagem regressiva de maneira que o título e a contagem sejam independentes e seja possível manipular dois blocos

--- a/minimum-boilerplate-theme/store/blocks/search-landing.jsonc
+++ b/minimum-boilerplate-theme/store/blocks/search-landing.jsonc
@@ -2,6 +2,7 @@
 {
     "store.custom#landing": {
         "blocks": [
+            "countdown.title",
             "countdown",
             "search-result-layout.customQuery"
         ]
